client/src/app/nav-bar/nav-bar.component.scss
.nav-bar-wrapper {
    position: relative;
}

.nav-bar {
    position: absolute;
    inset: 0 0 auto auto;
    justify-content: center;
    font-family: 'Assistant', sans-serif;
    width: 100%;
    z-index: 2;
    background-color: transparent;
    transition: position 0.5s ease-in, background-color 0.5s ease-in;
}

.nav-bar.color { position: relative; background-color: white; box-shadow: 0 1px 1px rgb(209, 209, 209); }

.nav-bar.scrollable { position: fixed; background: white; }
.nav-bar.scrollable > a { color: black; }

.logo {
    position: absolute; 
    padding: 0.25rem 0.5rem;
    inset: 15% 0 0 5%; 
    font-size: clamp(1.125rem, 1.5vw, 1.5rem); 
    height: fit-content;
    width: fit-content;
    background: rgb(243, 243, 243);
    box-shadow: 0 0 1px;
    border: 3px solid black;
    border-radius: 2rem;
    z-index: 1;
}

.logo-1 { font-weight: bold; color: purple; }
.logo-2 { font-weight: bold; color: black; }

.nav-bar > a {
    position: relative;
    list-style: none;
    justify-content: center;
    padding: 3vh 0;
    font-size: clamp(0.75rem, 2vw, 0.9rem);
    letter-spacing: 0.5px;
    width: 15vw;
    color: white;  
}

.nav-bar.color > a { color: black; }

.nav-bar > a:hover { color: rgb(173, 173, 173); border-bottom: 0; }

.nav-bar.fixed > a.highlight { font-weight: 700; background: purple; color: gold; }
.fixed { position: fixed; }

.nav-bar > a > span { margin: 0.25rem 0 0 0.25rem; }

.expand-links { 
    position: absolute; 
    bottom: 0;
    flex-direction: column;
    font-size: clamp(0.875rem, 1.5vw, 1rem);
    letter-spacing: 0;
    height: 0;
    width: 45vw;
    color: rgb(37, 37, 37);
    background: rgb(250, 250, 250, 0.9);
    transform: translateY(100%); 
    transition: height 0.5s ease-in;
    border-radius: 0 0 0.5rem 0.5rem;
    overflow: hidden;
    z-index: 1;
}

.nav-bar.clicked { animation: timer 0.3s ease-in; }

@keyframes timer {
    from { pointer-events: none; }
    to { pointer-events: unset; }
}

.grocery-list-link:hover .expand-links { height: fit-content; border: 1px solid rgb(190, 190, 190); }

.expand-icon { transition: all 0.3s ease-in; }
.grocery-list-link:hover .expand-icon { transform: rotate(180deg); }

.expand-links > a { 
    position: relative;
    padding: 0.5vh 0.75vw; 
    column-gap: 1vw; 
    justify-content: center;
    height: 12.5vh;
    width: 100%;
    color: black;
    box-shadow: 0 0 2px 1px transparent; 
}

.expand-links > a:hover { font-weight: 700; background: gold; }

.cart-num { margin-left: 0.25rem; }

@media (max-width: 50rem) {
    .nav-bar { justify-content: space-evenly; }
    .nav-bar > a { width: 15%; margin: 0; }
    .nav-bar > .logo { position: absolute; transform: translateY(125%); }
    .nav-bar.scrollable > .logo { position: relative; transform: translateY(0); }
    .nav-bar.color > .logo { position: relative;  transform: translateY(0); }
    .expand-links { width: 50vw; }  
    .grocery-list-link:hover .expand-links { border: 1px solid rgb(190, 190, 190); }
}

@media (max-width: 35rem) {
    .nav-bar { flex-wrap: wrap; }
    .logo { inset: auto auto auto auto; }
    .linebreak { width: 100%; } 
}

@media (max-width: 25rem) { 
    .nav-bar > .logo { transform: translateY(150%); }
    .nav-bar > a { flex-direction: column; }
    .expand-links { left: -200%; width: 90vw; } 
    .expand-icon { display: none; } 
}

@media (max-width: 15rem) {
    .nav-bar > a > span { display: none; }
    .nav-bar > a > mat-icon { margin: 0 auto; }
}

